fix: overflow and placement

--- a/src/components/accelerate/AccelerateEventDescription.module.scss
+++ b/src/components/accelerate/AccelerateEventDescription.module.scss
@@ -1,8 +1,4 @@
 .root {
-  position: absolute;
-  bottom: 40px;
-  z-index: 2;
-
   width: 100%;
   border-radius: 4px;
   padding: 24px;
